turmites.lessons.turmites.langton.Langton.scala.code
def step() 
{
  if (getCouleurSol()==black) 
  {
    peindreBlanc()
    gauche()
    avance()
  }
  if (getCouleurSol()==white) 
  {
    peindreNoir()
    droite()
    avance()
  }
}

def peindre() 
{
  baisseBrosse()
  leveBrosse()
}

def peindreNoir() 
{
  setCouleurBrosse(black)
  peindreNoir()
}

def peindreBlanc() 
{
  setCouleurBrosse(white)
  peindreNoir()
}